2008-10-26  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keyboard-properties-xkbot.c: (option_focused_cb),
	(xkb_options_add_option), (xkb_options_add_group):
	* gnome-keyboard-properties.glade: scroll the options window when the
	keyboard focus moves out of the visible part (bug #557944)

Fri Oct 24 19:38:52 2008  Søren Sandmann  <sandmann@redhat.com>

	* gnome-keyboard-properties.c: Don't include gnome.h

Fri Oct 24 19:16:10 2008  Søren Sandmann  <sandmann@redhat.com>

	* gnome-keyboard-properties.c (main): Remove copying of legacy settings

2008-10-24  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkbot.c: Small fix - remember sorted list
	of expanders (in properties)

2008-10-19  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keyboard-properties-a11y.c: (setup_a11y_tabs): actually connect
	the stickykeys_two_key_off button (bug #556818)

2008-10-19  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkbot.c: Update group expander
	highlighting dynamically

2008-10-18  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkbot.c: fixed group sorting, using group
	name as is, without formatting

==================== 2.24.0.1 ====================

2008-09-21  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keyboard-properties.glade: set GtkAdjustment page size to 0
	to avoid problems due to newly enforced value boundaries in GTK+
	2.14. See bug #551740 for a description of the problem.

2008-09-11  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties.glade: small UI polish by Christian
	Persch (#551871), mnemonic fixed

2008-09-05  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkb.c, gnome-keyboard-properties-xkblt.c:
	using the fact that latest libxklavier returns descriptions in UTF-8,
	no need to convert in 8-bit locales

2008-09-03  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkbltadd.c: chosing first variant by
	default (#550722)

2008-07-27  Matthias Clasen  <mclasen@redhat.com>
