@@ -1,5 +1,10 @@
 2008-10-26  Jens Granseuer  <jensgr@gmx.net>
 
+	* gnome-keyboard-properties-xkbot.c: (xkb_options_popup_dialog):
+	declare variable at beginning of code block, fixes build with gcc 2.x
+
+2008-10-26  Jens Granseuer  <jensgr@gmx.net>
+
 	* gnome-keyboard-properties-xkbot.c: (option_focused_cb),
 	(xkb_options_add_option), (xkb_options_add_group):
 	* gnome-keyboard-properties.glade: scroll the options window when the
